.opsera-village/k8s/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: village
  namespace: opsera-village-dev
  labels:
    app: village
    tenant: opsera
    environment: dev
spec:
  type: ClusterIP
  selector:
    app: village
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
